# cmake-use-swig-csharp-namespace

./: .gitignore  CMakeLists.txt  mylib.cpp  mylib.hpp  mylib.i  readme.md
